rework style dashboard page

--- a/src/components/layout/NavBar.css
+++ b/src/components/layout/NavBar.css
@@ -1,4 +1,10 @@
-nav {
-    position: fixed;
-    background-color: red;
+.nav {
+  background-color: #ef5350;
+  padding: 10px;
+  margin-bottom: 15px;
+}
+
+.nav__item {
+  text-decoration: none;
+  color: white;
 }
