fix router & link issue

--- a/src/components/pokemon/PokemonCard.css
+++ b/src/components/pokemon/PokemonCard.css
@@ -1,4 +1,4 @@
-.pokemonCard {
+.pokemonCard__frame {
   background-color: white;
   flex-basis: 20%;
   margin-bottom: 10px;
@@ -8,12 +8,16 @@
   flex-direction: column;
   justify-content: space-around;
   cursor: pointer;
+  display: flex;
+}
+
+.pokemonCard {
+  flex: 1;
 }
 
 .pokemonCard__header {
   background-color: lightgray;
   border-bottom: 1px solid black;
-  width: 100%;
   padding-top: 3px;
   padding-bottom: 3px;
 }
