--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,14 @@
   margin: 0;
 }
 
-.app {
-  height: 100vh;
+.app {  
+  height: 100vh;;
+  max-width: 1300px;
+  margin: auto;
+}
+
+.container {
+
 }
 
 a {
