--- a/src/components/pokemon/PokemonCard.css
+++ b/src/components/pokemon/PokemonCard.css
@@ -9,7 +9,7 @@
   perspective: 500px;
 }
 
-.content {
+.pokemonCard__content {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -19,13 +19,13 @@
   transform-style: preserve-3d;
 }
 
-.pokemonCard:hover .content {
+.pokemonCard:hover .pokemonCard__content {
   transform: rotateY( 180deg ) ;
   transition: transform 0.5s;
 }
 
-.front,
-.back {
+.pokemonCard__front,
+.pokemonCard__back {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -39,7 +39,7 @@
   backface-visibility: hidden;
 }
 
-.back {
+.pokemonCard__back {
   background: #CC0000;
   display: flex;
   flex-direction: column;
@@ -50,45 +50,3 @@
 .pokemonCard__title {
   text-transform: capitalize;
 }
-
-/* .pokemonCard {
-  padding: .75rem;
-}
-
-.pokemonCard {
-  margin: 1rem;
-}  */
-/* .pokemonCard__frame {
-  background-color: yellow;
-  flex-basis: 25%;
-  margin-bottom: 10px;
-  border: 1px solid black;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: space-around;
-  cursor: pointer;
-  display: flex;
-}
-
-.pokemonCard {
-  flex: 1;
-}
-
-.pokemonCard__header {
-  background-color: lightgray;
-  border-bottom: 1px solid black;
-  padding-top: 3px;
-  padding-bottom: 3px;
-}
-
-.pokemonCard__title {
-  text-align: center;
-  padding: 3px;
-} 
-
-
-
-column is-one-quarter
-
-*/
