--- a/src/components/pokemon/Pokemon.css
+++ b/src/components/pokemon/Pokemon.css
@@ -1,33 +1,63 @@
-.pokedexFrame {
-  width: 700px;
+.pokemon__header {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+  border-bottom: 1px solid gray;
 }
-.pokedexFrame__image, .pokedexFrame__index, .pokedexFrame__name {
-    background-color: yellow;
-    z-index: 1;
-    position: relative;
-}
-.pokedexFrame__image {
-  top: 160px;
-  left: 120px;
-}
-.pokedexFrame__image > img {
-  height: 130px;
-  width: 130px;
+.pokemon__type {
+  margin-left: 5px;
 }
 
-.pokedexFrame__index {
-  top: 310px;
-  left: 100px;
+.pokemon__primaryInfo {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 5px;
+  border-bottom: 1px solid gray;
 }
 
-.pokedexFrame__index > h5 {
+.pokemon__image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+.pokemon__image > img {
+  width: 40%;
+}
+
+.pokemon__image,
+.pokemon__stats {
+  flex: 1;
+  padding: 1rem;
+}
+.pokemon__stats > h1 {
+  text-transform: capitalize;
+  margin-bottom: 5px;
+}
+.pokemon__stat,
+.pokemon__statDescription {
+  padding-bottom: 5px;
+}
+.pokemon__statName {
   font-weight: bold;
 }
 
-.pokedexFrame__name {
-    top: 425px;
-    left: 100px;
+.pokemon__secondaryInfo {
+  display: flex;
+  justify-content: space-evenly;
 }
-.pokedexFrame__name > h4 {
-    font-weight: bolder;
+.profile__left,
+.profile__right {
+  flex: 1;
+  padding: 1rem;
+}
+.profile {
+  padding-bottom: 5px;
+}
+.profile__title {
+  font-weight: bold;
+}
+
+.MuiLinearProgress-bar {
+  background-color: #cc0000 !important;
 }
