--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,8 @@
   margin: auto;
   display: flex;
   flex-direction: column;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 .container {
   flex-grow: 1;
