--- a/src/components/pokemon/PokemonCard.css
+++ b/src/components/pokemon/PokemonCard.css
@@ -9,6 +9,10 @@
   perspective: 500px;
 }
 
+.pokemonCard__image {
+  width: 120px;
+}
+
 .pokemonCard__content {
   position: absolute;
   width: 100%;
